<resources>
    <string name="app_name">Assignment2</string>
    <string name="chatbot_placeholder">Ask me anything...</string>
    <string name="send">Send</string>
    <string name="chatbot_connection_error">Unable to connect to chatbot. Please try again.</string>
    
    <!-- New task creation design strings -->
    <string name="create_new_task_title">Create new task</string>
    <string name="close_button_description">Close screen</string>
    <string name="details_tab">Details</string>
    <string name="attachments_tab">Attachments</string>
    <string name="task_name_label">Task name</string>
    <string name="task_name_hint">Meeting with client</string>
    <string name="description_label">Description</string>
    <string name="description_hint">Discuss progress, next steps, and feedback.</string>
    <string name="choose_date_label">Choose date</string>
    <string name="default_date">Jan 21, 2025</string>
    <string name="calendar_icon_description">Calendar icon</string>
    <string name="choose_time_label">Choose time</string>
    <string name="default_time">02:20 PM</string>
    <string name="time_icon_description">Time icon</string>
    <string name="priority_label">Priority</string>
    <string name="priority_low">🔵 Low</string>
    <string name="priority_medium">🔶 Medium</string>
    <string name="priority_high">🔺 High</string>
    <string name="reminder_schedule_label">Reminder schedule</string>
    <string name="create_task_button_text">Create Task</string>
    <string name="payment_amount_label">Payment Amount</string>
    <string name="location_label">Location</string>
    <string name="location_hint">Enter task location</string>
    
</resources>